chore: find/replce guides.18f.gov

--- a/assets/methods/styles/_print.scss
+++ b/assets/methods/styles/_print.scss
@@ -240,7 +240,7 @@
     border-top: 1px solid #f1f1f1;
     bottom: .1in;
     bottom: .3125in;
-    content: 'Learn more: guides.18f.gov/methods';
+    content: 'Learn more: 18f-guides.netlify.app/methods';
     display: block;
     font-size: 8pt;
     font-style: italic;
